@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2006, 2008 - TortoiseSVN
+// Copyright (C) 2003-2006, 2008-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -62,6 +62,11 @@ void CSysImageList::Cleanup()
 
 
 // Operations
+
+int CSysImageList::AddIcon(const HICON hIcon)
+{
+	return this->Add(hIcon);
+}
 
 int CSysImageList::GetDirIconIndex() const
 {
